--- a/css/index_main.less.css
+++ b/css/index_main.less.css
@@ -383,3 +383,85 @@ body:not(#afui) .upage-outer {
 #afui .wide-control > .d-margins {
   margin: 0;
 }
+#afui input.toggle + label {
+  left: 0;
+}
+.uib_row_3:not(.cright) > .col {
+  padding-right: 20px;
+}
+.uib_row_3.cright > .col {
+  padding-left: 20px;
+}
+@media all {
+  .col-0_12-12 {
+    width: auto;
+    float: none !important;
+  }
+  .urow:not(.cright) > .col-0_12-12 {
+    padding-right: 0px !important;
+  }
+  .urow.cright > .col-0_12-12 {
+    padding-left: 0px !important;
+  }
+}
+@media all {
+  #afui .bar-bg {
+    background-color: #dadada;
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+  }
+}
+@media all {
+  #afui .thumb-bg > .sidebar-thumb {
+    background-image: url('../sidebar/css/images/gripper.png');
+  }
+  #afui .thumb-bg > .sidebar-thumb:hover,
+  #afui .thumb-bg > .sidebar-thumb:active {
+    background-color: #eeeeee;
+  }
+}
+@media all {
+  #afui .bar-gutter .sidebar-content > .grid-pad {
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-left: 20px;
+  }
+}
+.uib-button-bar .d-margins {
+  margin: 0;
+}
+@media all {
+  #afui .default-button-bar-height {
+    height: 200px;
+  }
+}
+@media all {
+  #afui .default-graphic-button {
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.75);
+  }
+}
+@media all {
+  #afui .hover-graphic-button:hover {
+    border-radius: 5px;
+    background-color: #000000;
+  }
+}
+@media all {
+  #afui .active-graphic-button:active {
+    border-radius: 5px;
+    background-color: rgba(0, 0, 0, 0.75);
+  }
+}
+@media all {
+  #afui .default-graphic-text {
+    color: #FFFFFF;
+    text-align: center;
+  }
+}
+@media all {
+  #afui .default-graphic-sizing {
+    padding: 5px;
+  }
+}
