--- a/css/index/index_main.less
+++ b/css/index/index_main.less
@@ -18,3 +18,15 @@
 @import "af-radio-checkbox.less";
 @import "af-label-position.less";
 @import "afui-group-no-dmargins.less";
+@import "af-flipswitch.less";
+@import "uib_row_3.less";
+@import "styles/bar-bg -- background.less";
+@import "styles/thumb-bg -- thumb.less";
+@import "styles/bar-gutter -- gutter.less";
+@import "uib-button-bar.less";
+@import "styles/default-button-bar-height -- height.less";
+@import "styles/default-graphic-button -- default.less";
+@import "styles/hover-graphic-button -- hover.less";
+@import "styles/active-graphic-button -- active.less";
+@import "styles/default-graphic-text -- text.less";
+@import "styles/default-graphic-sizing -- graphic_sizing.less";
